Fix z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -223,6 +223,7 @@ html.has-scroll-dragging {
 
   to {
     opacity: 0;
+    z-index: -1;
   }
 }
 
